--- a/package.json
+++ b/package.json
@@ -49,19 +49,16 @@
     "report-dir": "./.nyc_output"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.18.3",
+    "classnames": "^2.2.6",
+    "express": "^4.16.3",
+    "mysql": "^2.16.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "7.0.3",
     "redux": "^4.0.1",
-    "@date-io/date-fns": "^1.3.6",
-    "@material-ui/core": "^4.0.2",
-    "@material-ui/pickers": "^3.1.0",
-    "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.18.3",
-    "classnames": "^2.2.6",
-    "date-fns": "^2.0.0-alpha.31",
-    "express": "^4.16.3",
-    "mysql": "^2.16.0"
+    "redux-form": "^8.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
