--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "report-dir": "./.nyc_output"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
