--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express": "^4.16.3",
     "mysql": "^2.16.0",
     "react": "^16.5.2",
+    "react-day-picker": "^7.3.0",
     "react-dom": "^16.5.2",
     "react-redux": "7.0.3",
     "redux": "^4.0.1",
