--- a/package.json
+++ b/package.json
@@ -59,14 +59,15 @@
     "react-dom": "^16.5.2",
     "react-redux": "7.0.3",
     "redux": "^4.0.1",
-    "redux-form": "^8.2.3"
+    "redux-form": "^8.2.3",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.0",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.0",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^1.0.0",
@@ -74,6 +75,14 @@
     "css-loader": "^2.0.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
@@ -82,6 +91,7 @@
     "nodemon": "^1.18.11",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.3.0",
+    "redux-devtools-extension": "^2.13.8",
     "sinon": "^7.3.0",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
