--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,19 @@
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
+    "settings": {
+        "react": {
+            "createClass": "createReactClass",
+            "pragma": "React",
+            "version": "15.0",
+            "flowVersion": "0.53"
+        },
+        "propWrapperFunctions": [
+            "forbidExtraProps",
+            {"property": "freeze", "object": "Object"},
+            {"property": "myFavoriteWrapper"}
+        ]
+    },
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaFeatures": {
@@ -21,5 +34,8 @@
         "react"
     ],
     "rules": {
+        "react/jsx-no-undef": 1,
+        "react/jsx-uses-react": 1,
+        "react/jsx-uses-vars": 1
     }
 }
