--- a/package.json
+++ b/package.json
@@ -54,8 +54,12 @@
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "express": "^4.16.3",
+    "lodash": "^4.17.15",
     "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
     "passport": "^0.4.0",
+    "pg": "^7.12.0",
+    "pg-hstore": "^2.3.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "7.0.3",
@@ -63,7 +67,8 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-form": "^8.2.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sequelize": "^5.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
