--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "express": "^4.16.3",
-    "express-session": "^1.16.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
