--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
+    "dotenv": "^8.0.0",
+    "dotenv-webpack": "^1.7.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
