--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server/index.js",
   "scripts": {
-    "build": "start webpack --mode development",
+    "build": "start webpack --mode production",
     "start": "start webpack-dev-server --mode development --history-api-fallback",
     "server": "start nodemon src/server/server.js",
     "all-start": "npm-run-all --parallel start server",
@@ -53,8 +53,6 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
-    "dotenv": "^8.0.0",
-    "dotenv-webpack": "^1.7.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
