--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "report-dir": "./.nyc_output"
   },
   "dependencies": {
+    "@material-ui/core": "^4.3.3",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
@@ -74,6 +75,7 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-form": "^8.2.3",
+    "redux-form-material-ui": "0.20.1",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.13.0",
     "sequelize-cli": "^5.5.0"
