--- a/package.json
+++ b/package.json
@@ -50,16 +50,21 @@
     "report-dir": "./.nyc_output"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.3.3",
+    "@material-ui/pickers": "^3.2.4",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
+    "date-fns": "^2.0.0-beta.5",
     "express": "^4.16.3",
     "express-validator": "^6.1.1",
+    "image-webpack-loader": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "nodemailer": "^6.3.0",
@@ -73,9 +78,10 @@
     "react-redux": "7.0.3",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-widgets": "^4.4.11",
+    "react-widgets-moment": "^4.0.27",
     "redux": "^4.0.1",
     "redux-form": "^8.2.3",
-    "redux-form-material-ui": "0.20.1",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.13.0",
     "sequelize-cli": "^5.5.0"
