--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.3.3",
+    "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.4",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
