--- a/package.json
+++ b/package.json
@@ -9,46 +9,10 @@
     "start-dev": "start webpack-dev-server --mode development --history-api-fallback",
     "server-dev": "start nodemon src/server/server.js",
     "all-start": "npm-run-all --parallel start-dev server-dev",
-    "test": "mocha --opts ./config/mocha.opts src/client/**/*.test.js --recursive --silent",
-    "test-cov": "nyc -e .jsx mocha --opts ./config/mocha.opts src/**/*.test.js --recursive -R nyan --silent",
-    "update-snapshots": "mocha --opts ./config/mocha.opts src/**/*.test.js --require mocha-snapshots --update"
+    "test": "jest"
   },
   "author": "",
   "license": "",
-  "nyc": {
-    "check-coverage": false,
-    "per-file": true,
-    "lines": 100,
-    "statements": 100,
-    "functions": 100,
-    "branches": 100,
-    "reporter": [
-      "lcov",
-      "text",
-      "text-summary"
-    ],
-    "require": [
-      "@babel/register"
-    ],
-    "exclude": [
-      "coverage/**",
-      "test/**",
-      "test{,-*}.js",
-      "**/*.test.js",
-      "**/__tests__/**",
-      "**/node_modules/**",
-      "**/__snapshots__/**",
-      ".nyc_output/**",
-      ".nyc_output-tmp/**",
-      "config/mocha-setup.js",
-      "config/mocha.opts",
-      "**/mockData/**"
-    ],
-    "cache": true,
-    "all": false,
-    "temp-directory": "./.nyc_output-tmp",
-    "report-dir": "./.nyc_output"
-  },
   "dependencies": {
     "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.3.3",
@@ -90,11 +54,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.0",
-    "chai": "^4.2.0",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.2",
@@ -104,14 +65,11 @@
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "mocha": "^6.0.2",
-    "mocha-snapshots": "^4.2.0",
     "npm-run-all": "^4.1.5",
-    "nyc": "^13.3.0",
     "redux-devtools-extension": "^2.13.8",
-    "sinon": "^7.3.0",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.33.0",
