--- a/package.json
+++ b/package.json
@@ -9,52 +9,41 @@
     "start-dev": "start webpack-dev-server --mode development --history-api-fallback",
     "server-dev": "start nodemon src/server/server.js",
     "all-start": "npm-run-all --parallel start-dev server-dev",
-    "test": "mocha --opts ./config/mocha.opts src/client/**/*.test.js --recursive --silent",
-    "test-cov": "nyc -e .jsx mocha --opts ./config/mocha.opts src/**/*.test.js --recursive -R nyan --silent",
-    "update-snapshots": "mocha --opts ./config/mocha.opts src/**/*.test.js --require mocha-snapshots --update"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
+  },
+  "jest": {
+    "automock": false,
+    "setupFiles": [
+      "./test/jestsetup.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "bower_components",
+      "shared"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   },
   "author": "",
   "license": "",
-  "nyc": {
-    "check-coverage": false,
-    "per-file": true,
-    "lines": 100,
-    "statements": 100,
-    "functions": 100,
-    "branches": 100,
-    "reporter": [
-      "lcov",
-      "text",
-      "text-summary"
-    ],
-    "require": [
-      "@babel/register"
-    ],
-    "exclude": [
-      "coverage/**",
-      "test/**",
-      "test{,-*}.js",
-      "**/*.test.js",
-      "**/__tests__/**",
-      "**/node_modules/**",
-      "**/__snapshots__/**",
-      ".nyc_output/**",
-      ".nyc_output-tmp/**",
-      "config/mocha-setup.js",
-      "config/mocha.opts",
-      "**/mockData/**"
-    ],
-    "cache": true,
-    "all": false,
-    "temp-directory": "./.nyc_output-tmp",
-    "report-dir": "./.nyc_output"
-  },
   "dependencies": {
     "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.4",
     "axios": "^0.19.0",
+    "babel-jest": "^24.9.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
@@ -62,6 +51,7 @@
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.16.3",
     "express-validator": "^6.1.1",
+    "identity-obj-proxy": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mysql": "^2.16.0",
@@ -77,6 +67,7 @@
     "react-redux": "7.0.3",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-test-renderer": "^16.9.0",
     "redux": "^4.0.1",
     "redux-form": "^8.2.3",
     "redux-thunk": "^2.3.0",
@@ -90,11 +81,11 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.0",
-    "chai": "^4.2.0",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.2",
@@ -104,14 +95,16 @@
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "jest-mock-axios": "^3.1.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "mocha": "^6.0.2",
-    "mocha-snapshots": "^4.2.0",
+    "moxios": "^0.4.0",
+    "node-fetch": "^2.6.0",
     "npm-run-all": "^4.1.5",
-    "nyc": "^13.3.0",
     "redux-devtools-extension": "^2.13.8",
-    "sinon": "^7.3.0",
+    "redux-mock-store": "^1.5.3",
+    "sinon": "^7.4.2",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.33.0",
