fix authenticate, add pg for staging

--- a/package.json
+++ b/package.json
@@ -46,36 +46,35 @@
     "babel-jest": "^24.9.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
-    "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.16.3",
     "express-validator": "^6.1.1",
-    "identity-obj-proxy": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mysql": "^2.16.0",
-    "mysql2": "^1.6.5",
     "nodemailer": "^6.3.0",
     "nodemon": "^1.18.11",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pg": "^7.12.0",
+    "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "7.0.3",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-test-renderer": "^16.9.0",
     "redux": "^4.0.1",
     "redux-form": "^8.2.3",
     "redux-thunk": "^2.3.0",
-    "sequelize": "^5.13.0",
-    "sequelize-cli": "^5.5.1",
-    "webpack-merge": "^4.2.2"
+    "sequelize": "^5.18.4",
+    "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
+    "identity-obj-proxy": "^3.0.0",
+    "react-test-renderer": "^16.9.0",
+    "webpack-merge": "^4.2.2",
+    "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
