--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,6 +1,6 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('src/server/db', 'db-config.js'),
+  'config': path.resolve('src/server/config', 'db-config.js'),
   'migrations-path': path.resolve('src/server/db', 'migrations')
 }
