--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint ./src ",
-    "lint-fix": "eslint ./src --fix"
+    "lint-fix": "eslint ./src --fix",
+    "try": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
   "jest": {
     "automock": false,
