--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "@date-io/date-fns": "^1.3.9",
+    "@date-io/date-fns": "1.3.11",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.4",
@@ -48,7 +48,7 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
-    "date-fns": "^2.0.0-beta.5",
+    "date-fns": "^2.1.0",
     "express": "^4.16.3",
     "express-validator": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
