--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "start webpack-dev-server --config webpack.dev.js --history-api-fallback",
     "server": "start nodemon src/server/server.js",
     "start-dev-server": "npm-run-all --parallel dev server",
+    "pretest": "cross-env NODE_ENV=test sequelize db:create && cross-env NODE_ENV=test npx sequelize db:migrate && cross-env NODE_ENV=test npx sequelize db:seed:all",
     "test": "jest",
+    "posttest": "cross-env NODE_ENV=test npx sequelize db:drop",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint ./src ",
@@ -81,6 +83,7 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.0",
+    "cross-env": "^6.0.3",
     "css-loader": "^2.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
