--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "server": "start nodemon src/server/server.js",
     "start-dev-server": "npm-run-all --parallel dev server",
     "pretest": "cross-env NODE_ENV=test sequelize db:create && cross-env NODE_ENV=test npx sequelize db:migrate && cross-env NODE_ENV=test npx sequelize db:seed:all",
+    "pretest:coverage": "cross-env NODE_ENV=test sequelize db:create && cross-env NODE_ENV=test npx sequelize db:migrate && cross-env NODE_ENV=test npx sequelize db:seed:all",
+    "posttest:coverage": "cross-env NODE_ENV=test npx sequelize db:drop",
     "test": "jest",
     "posttest": "cross-env NODE_ENV=test npx sequelize db:drop",
     "test:watch": "jest --watch",
