--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "server": "start nodemon src/server/server.js",
     "start-dev-server": "npm-run-all --parallel dev server",
     "pretest": "cross-env NODE_ENV=test sequelize db:create && cross-env NODE_ENV=test npx sequelize db:migrate && cross-env NODE_ENV=test npx sequelize db:seed:all",
-    "test": "jest",
+    "test": "jest --runInBand --forceExit",
     "posttest": "cross-env NODE_ENV=test npx sequelize db:drop",
     "pretest:coverage": "cross-env NODE_ENV=test sequelize db:create && cross-env NODE_ENV=test npx sequelize db:migrate && cross-env NODE_ENV=test npx sequelize db:seed:all",
     "posttest:coverage": "cross-env NODE_ENV=test npx sequelize db:drop",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest --coverage --runInBand --forceExit",
     "lint": "eslint ./src ",
     "lint-fix": "eslint ./src --fix"
   },
